20131215  Initialized