@@ -1,2 +1,3 @@
 .*swp
 *ini
+User/config.d/*
