@@ -7,7 +7,7 @@
       service: name=mysql state=stopped
       ignore_errors: true
 
-    - name:   Delete the redolog the hard was (needed for MySQL <=5.6)
+    - name:   Delete the redolog the hard way (needed for MySQL <=5.6)
       shell:  rm /var/lib/mysql/ib_logfile*
       ignore_errors: true
 
@@ -15,9 +15,5 @@
       service: name=mysql state=started arguments="--wsrep-cluster-address=gcomm://"
       when:    leader is defined
 
-#    - name:    Start next nodes {{ leader }}
-#      service: name=mysql state=started 
-#      when:    leader is undefined
-#
 
 - include: cluster_inital_start_rest.yaml
