@@ -1,4 +1,5 @@
 ---
+ - include: variable_checking.yaml        tags=galera,sysbench
  - include: services.yaml                 tags=galera,sysbench
  - include: rhelpackages.yaml             tags=galera,sysbench  
  - include: installcoderhipsrhel.yaml     tags=galera
