@@ -1,3 +1,4 @@
+- include: variable_checking.yaml
 - include: galera_configure.yaml
 - include: galera_restart.yaml
 - include: sysbench_tests.yaml
