@@ -1,38 +1,0 @@
-[mysqld]
-user                          = mysql
-binlog_format                 = ROW
-default-storage-engine        = innodb
-
-innodb_autoinc_lock_mode      = 2
-innodb_flush_log_at_trx_commit= 0
-innodb_buffer_pool_size       = {{ innodb_buffer_pool_size| default('2048M') }}
-innodb_log_buffer_size        = {{ innodb_log_buffer_size| default('128M') }}
-innodb_file_per_table        = 1
-
-query_cache_size              = 0
-query_cache_type              = 0
-bind-address                  = 0.0.0.0
-
-init_file                     = /etc/mysql/init
-skip_name_resolve             
-max_connections               = 2000
-
-# Galera
-wsrep_provider                = "{{ galerapath }}"
-wsrep_cluster_name            = deadcandance
-wsrep_cluster_address         = "gcomm://{{ gcomm }}"
-wsrep_slave_threads           = {{ wsrep_slave_threads| default(8) }}
-wsrep_certify_nonPK           = 1
-wsrep_max_ws_rows             = 131072
-wsrep_max_ws_size             = 1073741824
-wsrep_debug                   = 0
-wsrep_convert_LOCK_to_trx     = 0
-wsrep_retry_autocommit        = 1
-wsrep_auto_increment_control  = 1
-wsrep_drupal_282555_workaround= 0
-wsrep_causal_reads            = 0
-wsrep_provider_options        = {{ wsrep_provider_options|default() }}
-wsrep_sst_method              = rsync
-
-!includedir /etc/mysql/conf.d/
-
