@@ -1,0 +1,7 @@
+---
+- hosts: galera
+  vars_files:
+   - config_vars.yaml
+  tasks:
+    - fail: "Variable gcomm was not defined"
+      when:  gcomm is undefined
