@@ -1,0 +1,9 @@
+User Specific Stuff
+==================
+
+In this directory you can put your stuff you 
+want to distribute without doing any messing with options.
+So you can start with putting your config into conf.d.
+Its the same as with general MySQL.
+So you put your configfile(additions into the conf.d directory) 
+and it is going to be distributed
